local-dev/medicrea-app-k8s.yaml
#########################################################
# Medicrea App service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medicrea-app
spec:
  selector:
    matchLabels:
      app: medicrea-app
  replicas: 2
  template:
    metadata:
      labels:
        app: medicrea-app
    spec:
      containers:
        - name: medicrea-app
          image: medicrea-comms-backend
      livenessProbe:
        httpGet:
          path: /live
          port: 3001
          initialDelaySeconds: 60
          periodSeconds: 5
      readinessProbe:
        httpGet:
          path: /ready
          port: 3001
          initialDelaySeconds: 60
          periodSeconds: 5
---
