local-dev/sfdc_webhooks-k8s.yaml
#########################################################
# SFDC Webhooks service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sfdc-webhooks
spec:
  selector:
    matchLabels:
      app: sfdc-webhooks
  replicas: 2
  template:
    metadata:
      labels:
        app: sfdc-webhooks
    spec:
      containers:
        - name: sfdc-webhooks
          image: medicrea-comms-backend
---
