local-dev/voicemail-k8s.yaml
#########################################################
# Voicemail service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voicemail
spec:
  selector:
    matchLabels:
      app: voicemail
  replicas: 2
  template:
    metadata:
      labels:
        app: voicemail
    spec:
      containers:
        - name: voicemail
          image: medicrea-comms-backend
---
