local-dev/ingress-k8s.yaml
#########################################################
# Ingress for Moleculer API Gateway
#########################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  template:
    metadata:
      labels:
        app: ingress
  rules:
    - host: medicrea-comms-backend.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000

---
